package com.teatro.backend.models.enums;

public enum EventStatus {
    SCHEDULED,
    CANCELLED,
    FINISHED
}

