package com.teatro.backend.models.enums;

public enum EventType {
    THEATER,
    CONCERT,
    CONFERENCE
}