package com.teatro.backend.models.enums;

public enum ReservationStatus {
    PENDING,
    PAID,
    CANCELLED
}